--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prop-types": "^15.5.10",
     "react-native-drawer": "2.5.1",
     "react-native-easy-grid": "0.2.2",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-vector-icons": "^7.0.0",
     "react-tween-state": "^0.1.5",
     "tween-functions": "^1.0.1"
@@ -68,9 +69,9 @@
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react": "16.4.1",
-    "react-native": "^0.60.4",
-    "react-test-renderer": "16.4.1"
+    "react": "19.1.1",
+    "react-native": "0.82.1",
+    "react-test-renderer": "^19.1.0"
   },
   "gitHead": "5bbeacc403ba97622703699132c55d8359344004",
   "homepage": "https://github.com/GeekyAnts/NativeBase#readme",
@@ -81,18 +82,5 @@
     "react": ">=16.4.1",
     "react-native": ">=0.56.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && pretty-quick --staged --pattern \"src/**/*.{js, json}\""
-    }
-  },
-  "readmeFilename": "README.md",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GeekyAnts/NativeBase.git"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/NativeBase"
-  }
+  "readmeFilename": "README.md"
 }
