--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clamp": "^1.0.1",
     "color": "~3.1.2",
     "create-react-class": "^15.6.3",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "eslint-config-prettier": "^6.0.0",
     "fs-extra": "^2.0.0",
     "jest-react-native": "^18.0.0",
@@ -77,7 +78,6 @@
   "homepage": "https://github.com/GeekyAnts/NativeBase#readme",
   "main": "dist/src/index.js",
   "typings": "./index.d.ts",
-  "optionalDependencies": {},
   "peerDependencies": {
     "react": ">=16.4.1",
     "react-native": ">=0.56.0"
